<resources>
    <string name="app_name">Quack</string>
    <string name="username_message">This is your username which will be visible on your chats</string>
    <string name="about">About and phone number</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="keep_me_signed_in">Save email for next login</string>
    <string name="requiredpassword">password</string>
    <string name="username">username</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="emojify_me">Emojify Me!</string>
    <string name="no_emoji">No Emoji Expression Found</string>
    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>
    <string name="go">GO</string>
    <string name="permission_denied">Permission denied</string>
    <string name="imageview_description">The imageview that contains the emojified picture</string>
    <string name="no_faces_message">No Faces Detected</string>
    <string name="profile">Profile</string>
    <string name="username_main">Username</string>
    <string name="about_main">About</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>

</resources>
