<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    android:orientation="vertical"
    tools:context="macrodes.lab.com.quack.public_profile.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="@color/colorAccent">

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="55sp"
            android:layout_height="wrap_content"
            android:onClick="backButtonClicked"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250sp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="profileImageClicked"/>


            <LinearLayout
                android:id="@+id/ImageSelectorLayout"
                android:layout_width="300dp"
                android:layout_height="110dp"
                android:layout_gravity="right|bottom"
                android:layout_margin="60dp"
                android:background="#252525"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Camera"
                      android:textColor="#ffffff"/>
                  <ImageButton
                      style="@style/Widget.AppCompat.Button.Borderless"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:onClick="changePictureClicked"
                      android:src="@drawable/ic_photo_camera_settings_24dp" />
              </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallery"
                        android:textColor="#ffffff"/>

            <ImageButton
                      style="@style/Widget.AppCompat.Button.Borderless"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                android:onClick="SelctFromGalleryClicked"
                      android:src="@drawable/ic_photo_library_black_24dp" />

              </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remove"
                        android:textColor="#ffffff"/>

                    <ImageButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="RemovePhoto"
                        android:src="@drawable/ic_delete_black_24dp" />

                </LinearLayout>


            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="5sp"
                android:clickable="true"
                android:onClick="hideLayoutSelector"
                app:srcCompat="@drawable/ic_camera_black_24dp"
                tools:ignore="VectorDrawableCompat" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fdfdfd"
            android:orientation="horizontal"
            android:padding="8sp">
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/username_main"
                android:textSize="18sp"/>

            <ImageButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="changenameClicked"
                android:src="@drawable/ic_edit_black_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_message"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ddd1d9d9"
            android:padding="10sp"
            android:text="@string/about"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fbfbfc"
            android:orientation="vertical"
            android:padding="4sp">




            <TextView
                android:id="@+id/aboutmeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:clickable="true"
                android:onClick="aboutClicked"
                android:padding="10sp"
                android:text="@string/about_main"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="22sp"
                android:paddingRight="22sp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="#7e7e80"
                    />

            </LinearLayout>
            <TextView
                android:id="@+id/phoneNumberBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:clickable="true"
                android:onClick="phoneNumberClicked"
                android:padding="10sp"
                android:text="@string/phone_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="22sp"
        android:paddingRight="22sp">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="#7e7e80"
            />

</LinearLayout>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:clickable="true"
                android:padding="10sp"
                android:text="@string/email"/>


        </LinearLayout>

    </LinearLayout>


    </LinearLayout>
</ScrollView>

    </LinearLayout>
